@@ -7,14 +7,12 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import reactor.core.publisher.Flux;
+import reactor.test.StepVerifier;
 import ru.yandex.practicum.cart.model.CartItem;
 import ru.yandex.practicum.cart.repository.CartItemRepository;
 import ru.yandex.practicum.items.dto.ItemDto;
-import ru.yandex.practicum.items.dto.ItemsPageDto;
 import ru.yandex.practicum.items.dto.PageDto;
 import ru.yandex.practicum.items.model.Item;
 import ru.yandex.practicum.items.model.ItemSort;
@@ -53,305 +51,383 @@ class CatalogServiceTest {
         item_3 = new Item(3L, "Test item_3 title", "Test item_3 description", null, 7999L);
         item_4 = new Item(4L, "Test item_4 title", "Test item_4 description", null, 7999L);
 
-        cartItem_1 = new CartItem(1L, item_1, 2);
-        cartItem_2 = new CartItem(2L, item_2, 3);
+        cartItem_1 = new CartItem(1L, item_1.getId(), 2);
+        cartItem_2 = new CartItem(2L, item_2.getId(), 3);
     }
 
     @Test
     void getItems_whenSearchIsBlank_shouldReturnPagedItems() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1, item_2, item_3),
-                PageRequest.of(0, 3),
-                4
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1, item_2, item_3));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
         when(cartItemRepository.findAllByItemIdIn(List.of(1L, 2L, 3L)))
-                .thenReturn(List.of(cartItem_1, cartItem_2));
+                .thenReturn(Flux.just(cartItem_1, cartItem_2));
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 1, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 3))
+                .assertNext(result -> {
+                    assertThat(result).isNotNull();
+                    assertThat(result.getItems()).hasSize(1);
+                    assertThat(result.getItems().get(0)).hasSize(3);
+                    assertThat(result.getPaging()).isNotNull();
+                    assertThat(result.getPaging().getPageNumber()).isEqualTo(1);
+                    assertThat(result.getPaging().getPageSize()).isEqualTo(3);
+                    assertThat(result.getPaging().isHasPrevious()).isFalse();
+                    assertThat(result.getPaging().isHasNext()).isFalse();
+                })
+                .verifyComplete();
 
-        assertThat(result).isNotNull();
-        assertThat(result.getItems()).hasSize(1);
-        assertThat(result.getItems().get(0)).hasSize(3);
-        assertThat(result.getPaging()).isNotNull();
-
-        verify(itemRepository).findAll(any(Pageable.class));
+        verify(itemRepository).findAllBy(any(Pageable.class));
         verify(itemRepository, never())
-                .findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
+                .findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCaseOrderByPriceAsc(
                         anyString(),
                         anyString(),
                         any(Pageable.class)
                 );
         verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L, 3L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenSearchExists_shouldSearchByTitleAndDescription() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1, item_2),
-                PageRequest.of(0, 3),
-                2
-        );
-
-        when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
+        when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCaseOrderByPriceAsc(
                 eq("item"),
                 eq("item"),
                 any(Pageable.class)
-        )).thenReturn(page);
+        )).thenReturn(Flux.just(item_1, item_2));
 
         when(cartItemRepository.findAllByItemIdIn(List.of(1L, 2L)))
-                .thenReturn(List.of(cartItem_1, cartItem_2));
+                .thenReturn(Flux.just(cartItem_1, cartItem_2));
 
-        ItemsPageDto result = catalogService.getItems("item", ItemSort.NO, 1, 3);
+        StepVerifier.create(catalogService.getItems("item", ItemSort.NO, 1, 3))
+                .assertNext(result -> {
+                    assertThat(result).isNotNull();
+                    assertThat(result.getItems()).hasSize(1);
+                    assertThat(result.getItems().get(0)).hasSize(3);
+                })
+                .verifyComplete();
 
-        assertThat(result).isNotNull();
-        assertThat(result.getItems()).hasSize(1);
-        assertThat(result.getItems().get(0)).hasSize(3);
-
-        verify(itemRepository).findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
+        verify(itemRepository).findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCaseOrderByPriceAsc(
                 eq("item"),
                 eq("item"),
                 any(Pageable.class)
         );
-        verify(itemRepository, never()).findAll(any(Pageable.class));
+        verify(itemRepository, never()).findAllBy(any(Pageable.class));
         verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenRepositoryReturnsEmptyPage_shouldReturnEmptyItemsList() {
-        Page<Item> page = Page.empty(PageRequest.of(0, 3));
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.empty());
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 3))
+                .assertNext(result -> {
+                    assertThat(result).isNotNull();
+                    assertThat(result.getItems()).isEmpty();
+                    assertThat(result.getPaging()).isNotNull();
+                    assertThat(result.getPaging().getPageNumber()).isEqualTo(1);
+                    assertThat(result.getPaging().getPageSize()).isEqualTo(3);
+                    assertThat(result.getPaging().isHasPrevious()).isFalse();
+                    assertThat(result.getPaging().isHasNext()).isFalse();
+                })
+                .verifyComplete();
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 1, 3);
-
-        assertThat(result).isNotNull();
-        assertThat(result.getItems()).isEmpty();
-        assertThat(result.getPaging()).isNotNull();
-
-        verify(itemRepository).findAll(any(Pageable.class));
+        verify(itemRepository).findAllBy(any(Pageable.class));
         verifyNoInteractions(cartItemRepository);
+        verifyNoMoreInteractions(itemRepository);
     }
 
     @Test
     void getItems_shouldMapCartItemsCountsCorrectly() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1, item_2),
-                PageRequest.of(0, 3),
-                2
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1, item_2));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
         when(cartItemRepository.findAllByItemIdIn(List.of(1L, 2L)))
-                .thenReturn(List.of(cartItem_1, cartItem_2));
+                .thenReturn(Flux.just(cartItem_1, cartItem_2));
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 1, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 3))
+                .assertNext(result -> {
+                    List<ItemDto> firstGroup = result.getItems().get(0);
 
-        List<ItemDto> firstGroup = result.getItems().getFirst();
+                    assertThat(firstGroup)
+                            .filteredOn(item -> !item.getId().equals(-1L))
+                            .extracting(ItemDto::getCount)
+                            .containsExactlyInAnyOrder(2, 3);
 
-        assertThat(firstGroup)
-                .filteredOn(item -> !item.getId().equals(-1L))
-                .extracting(ItemDto::getCount)
-                .containsExactlyInAnyOrder(2, 3);
+                    assertThat(firstGroup)
+                            .filteredOn(item -> item.getId().equals(-1L))
+                            .hasSize(1);
+                })
+                .verifyComplete();
 
-        assertThat(firstGroup)
-                .filteredOn(item -> item.getId().equals(-1L))
-                .hasSize(1);
-
+        verify(itemRepository).findAllBy(any(Pageable.class));
         verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenItemNotExistsInCart_shouldSetCountZero() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1, item_2),
-                PageRequest.of(0, 3),
-                2
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1, item_2));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
         when(cartItemRepository.findAllByItemIdIn(List.of(1L, 2L)))
-                .thenReturn(List.of());
+                .thenReturn(Flux.empty());
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 1, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 3))
+                .assertNext(result -> {
+                    List<ItemDto> firstGroup = result.getItems().get(0);
 
-        List<ItemDto> firstGroup = result.getItems().getFirst();
+                    assertThat(firstGroup)
+                            .filteredOn(item -> !item.getId().equals(-1L))
+                            .extracting(ItemDto::getCount)
+                            .containsExactlyInAnyOrder(0, 0);
+                })
+                .verifyComplete();
 
-        assertThat(firstGroup)
-                .filteredOn(item -> !item.getId().equals(-1L))
-                .extracting(ItemDto::getCount)
-                .containsExactlyInAnyOrder(0, 0);
-
+        verify(itemRepository).findAllBy(any(Pageable.class));
         verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_shouldCalculatePagingCorrectly() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_4),
-                PageRequest.of(1, 3),
-                4
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_4));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
-        when(cartItemRepository.findAllByItemIdIn(List.of(4L))).thenReturn(List.of());
+        when(cartItemRepository.findAllByItemIdIn(List.of(4L)))
+                .thenReturn(Flux.empty());
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 2, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 2, 3))
+                .assertNext(result -> {
+                    PageDto paging = result.getPaging();
 
-        PageDto paging = result.getPaging();
+                    assertThat(paging).isNotNull();
+                    assertThat(paging.getPageNumber()).isEqualTo(2);
+                    assertThat(paging.getPageSize()).isEqualTo(3);
+                    assertThat(paging.isHasPrevious()).isTrue();
+                    assertThat(paging.isHasNext()).isFalse();
+                })
+                .verifyComplete();
 
-        assertThat(paging).isNotNull();
-        assertThat(paging.getPageNumber()).isEqualTo(2);
-        assertThat(paging.getPageSize()).isEqualTo(3);
-        assertThat(paging.isHasPrevious()).isTrue();
-        assertThat(paging.isHasNext()).isFalse();
-        verify(itemRepository).findAll(any(Pageable.class));
+        verify(itemRepository).findAllBy(any(Pageable.class));
+        verify(cartItemRepository).findAllByItemIdIn(List.of(4L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenSortIsAlpha_shouldSortByTitleAscending() {
-        Page<Item> page = new PageImpl<>(List.of(item_1), PageRequest.of(0, 3), 1);
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
-        when(cartItemRepository.findAllByItemIdIn(List.of(1L))).thenReturn(List.of());
+        when(cartItemRepository.findAllByItemIdIn(List.of(1L)))
+                .thenReturn(Flux.empty());
 
-        catalogService.getItems("", ItemSort.ALPHA, 1, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.ALPHA, 1, 3))
+                .expectNextCount(1)
+                .verifyComplete();
 
         ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-        verify(itemRepository).findAll(pageableCaptor.capture());
+
+        verify(itemRepository).findAllBy(pageableCaptor.capture());
+        verify(cartItemRepository).findAllByItemIdIn(List.of(1L));
 
         Pageable pageable = pageableCaptor.getValue();
 
-        assertThat(pageable.getPageNumber()).isEqualTo(0);
-        assertThat(pageable.getPageSize()).isEqualTo(3);
+        assertThat(pageable.getPageNumber()).isZero();
+        assertThat(pageable.getPageSize()).isEqualTo(4);
         assertThat(pageable.getSort().getOrderFor("title")).isNotNull();
         assertThat(pageable.getSort().getOrderFor("title").isAscending()).isTrue();
+
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenSortIsPrice_shouldSortByPriceAscending() {
-        Page<Item> page = new PageImpl<>(List.of(item_1), PageRequest.of(0, 3), 1);
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1, item_2));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
-        when(cartItemRepository.findAllByItemIdIn(List.of(1L))).thenReturn(List.of());
+        when(cartItemRepository.findAllByItemIdIn(List.of(1L, 2L)))
+                .thenReturn(Flux.empty());
 
-        catalogService.getItems("", ItemSort.PRICE, 1, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.PRICE, 1, 3))
+                .assertNext(result -> {
+                    assertThat(result.getItems()).hasSize(1);
+
+                    assertThat(result.getItems().getFirst())
+                            .hasSize(3);
+
+                    assertThat(result.getItems().getFirst())
+                            .extracting(ItemDto::getId)
+                            .containsExactly(1L, 2L, -1L);
+                })
+                .verifyComplete();
 
         ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-        verify(itemRepository).findAll(pageableCaptor.capture());
+
+        verify(itemRepository).findAllBy(pageableCaptor.capture());
+        verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L));
 
         Pageable pageable = pageableCaptor.getValue();
 
+        assertThat(pageable.getPageNumber()).isZero();
         assertThat(pageable.getSort().getOrderFor("price")).isNotNull();
         assertThat(pageable.getSort().getOrderFor("price").isAscending()).isTrue();
+
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenSortIsNo_shouldUseUnsortedPageable() {
-        Page<Item> page = new PageImpl<>(List.of(item_1), PageRequest.of(0, 3), 1);
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
-        when(cartItemRepository.findAllByItemIdIn(List.of(1L))).thenReturn(List.of());
+        when(cartItemRepository.findAllByItemIdIn(List.of(1L)))
+                .thenReturn(Flux.empty());
 
-        catalogService.getItems("", ItemSort.NO, 1, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 3))
+                .assertNext(result -> {
+                    assertThat(result.getItems()).hasSize(1);
+                    assertThat(result.getItems().getFirst())
+                            .extracting(ItemDto::getId)
+                            .containsExactly(1L, -1L, -1L);
+
+                    assertThat(result.getPaging().getPageSize()).isEqualTo(3);
+                    assertThat(result.getPaging().getPageNumber()).isEqualTo(1);
+                    assertThat(result.getPaging().isHasPrevious()).isFalse();
+                    assertThat(result.getPaging().isHasNext()).isFalse();
+                })
+                .verifyComplete();
 
         ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-        verify(itemRepository).findAll(pageableCaptor.capture());
 
-        assertThat(pageableCaptor.getValue().getSort().isUnsorted()).isTrue();
+        verify(itemRepository).findAllBy(pageableCaptor.capture());
+        verify(cartItemRepository).findAllByItemIdIn(List.of(1L));
+
+        Pageable pageable = pageableCaptor.getValue();
+
+        assertThat(pageable.getPageNumber()).isZero();
+        assertThat(pageable.getSort().isUnsorted()).isTrue();
+
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_shouldGroupItemsByThree() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1, item_2, item_3, item_4),
-                PageRequest.of(0, 4),
-                4
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1, item_2, item_3, item_4));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
         when(cartItemRepository.findAllByItemIdIn(List.of(1L, 2L, 3L, 4L)))
-                .thenReturn(List.of());
+                .thenReturn(Flux.empty());
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 1, 4);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 4))
+                .assertNext(result -> {
+                    assertThat(result.getItems()).hasSize(2);
+                    assertThat(result.getItems().get(0)).hasSize(3);
+                    assertThat(result.getItems().get(1)).hasSize(3);
 
-        assertThat(result.getItems()).hasSize(2);
-        assertThat(result.getItems().get(0)).hasSize(3);
-        assertThat(result.getItems().get(1)).hasSize(3);
+                    assertThat(result.getItems().get(0))
+                            .extracting(ItemDto::getId)
+                            .containsExactly(1L, 2L, 3L);
+
+                    assertThat(result.getItems().get(1))
+                            .extracting(ItemDto::getId)
+                            .containsExactly(4L, -1L, -1L);
+                })
+                .verifyComplete();
+
+        verify(itemRepository).findAllBy(any(Pageable.class));
+        verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L, 3L, 4L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenItemsCountNotMultipleOfThree_shouldAddEmptyDtos() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1, item_2, item_3, item_4),
-                PageRequest.of(0, 4),
-                4
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1, item_2, item_3, item_4));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
         when(cartItemRepository.findAllByItemIdIn(List.of(1L, 2L, 3L, 4L)))
-                .thenReturn(List.of());
+                .thenReturn(Flux.empty());
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 1, 4);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 4))
+                .assertNext(result -> {
+                    assertThat(result.getItems()).hasSize(2);
 
-        assertThat(result.getItems()).hasSize(2);
+                    List<ItemDto> secondGroup = result.getItems().get(1);
 
-        List<ItemDto> secondGroup = result.getItems().get(1);
+                    assertThat(secondGroup).hasSize(3);
 
-        assertThat(secondGroup).hasSize(3);
-        assertThat(secondGroup)
-                .filteredOn(item -> !item.getId().equals(-1L))
-                .hasSize(1);
-        assertThat(secondGroup)
-                .filteredOn(item -> item.getId().equals(-1L))
-                .hasSize(2);
+                    assertThat(secondGroup)
+                            .filteredOn(item -> !item.getId().equals(-1L))
+                            .hasSize(1);
+
+                    assertThat(secondGroup)
+                            .filteredOn(item -> item.getId().equals(-1L))
+                            .hasSize(2);
+                })
+                .verifyComplete();
+
+        verify(itemRepository).findAllBy(any(Pageable.class));
+        verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L, 3L, 4L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_whenItemsCountLessThanThree_shouldAddEmptyDtos() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1),
-                PageRequest.of(0, 1),
-                1
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
-        when(cartItemRepository.findAllByItemIdIn(List.of(1L))).thenReturn(List.of());
+        when(cartItemRepository.findAllByItemIdIn(List.of(1L)))
+                .thenReturn(Flux.empty());
 
-        ItemsPageDto result = catalogService.getItems("", ItemSort.NO, 1, 1);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 1))
+                .assertNext(result -> {
+                    assertThat(result.getItems()).hasSize(1);
+                    assertThat(result.getItems().get(0)).hasSize(3);
 
-        assertThat(result.getItems()).hasSize(1);
-        assertThat(result.getItems().getFirst()).hasSize(3);
-        assertThat(result.getItems().getFirst())
-                .filteredOn(item -> !item.getId().equals(-1L))
-                .hasSize(1);
+                    assertThat(result.getItems().get(0))
+                            .extracting(ItemDto::getId)
+                            .containsExactly(1L, -1L, -1L);
+                })
+                .verifyComplete();
+
+        verify(itemRepository).findAllBy(any(Pageable.class));
+        verify(cartItemRepository).findAllByItemIdIn(List.of(1L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_shouldCallCartRepositoryWithCorrectItemIds() {
-        Page<Item> page = new PageImpl<>(
-                List.of(item_1, item_2, item_3),
-                PageRequest.of(0, 3),
-                3
-        );
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.just(item_1, item_2, item_3));
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
-        when(cartItemRepository.findAllByItemIdIn(anyList())).thenReturn(List.of());
+        when(cartItemRepository.findAllByItemIdIn(anyList()))
+                .thenReturn(Flux.empty());
 
-        catalogService.getItems("", ItemSort.NO, 1, 3);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 3))
+                .expectNextCount(1)
+                .verifyComplete();
 
+        verify(itemRepository).findAllBy(any(Pageable.class));
         verify(cartItemRepository).findAllByItemIdIn(List.of(1L, 2L, 3L));
+        verifyNoMoreInteractions(itemRepository, cartItemRepository);
     }
 
     @Test
     void getItems_shouldNotCallCartRepositoryWhenItemsPageIsEmpty() {
-        Page<Item> page = Page.empty(PageRequest.of(0, 3));
+        when(itemRepository.findAllBy(any(Pageable.class)))
+                .thenReturn(Flux.empty());
 
-        when(itemRepository.findAll(any(Pageable.class))).thenReturn(page);
+        StepVerifier.create(catalogService.getItems("", ItemSort.NO, 1, 3))
+                .assertNext(result -> {
+                    assertThat(result.getItems()).isEmpty();
+                    assertThat(result.getPaging().isHasNext()).isFalse();
+                    assertThat(result.getPaging().isHasPrevious()).isFalse();
+                })
+                .verifyComplete();
 
-        catalogService.getItems("", ItemSort.NO, 1, 3);
-
+        verify(itemRepository).findAllBy(any(Pageable.class));
         verifyNoInteractions(cartItemRepository);
+        verifyNoMoreInteractions(itemRepository);
     }
 }
